@@ -14,6 +14,8 @@
 	(rd_ldso_nonzero_lmid_consistent_begin): Likewise.
 	(rd_ldso_consistent_end): Note that calls from inside a breakpoint
 	handler do nothing.
+	(rd_start_trap): Trip a rd_event callback if turned on when the
+	start trap is hit.
 
 2013-06-20  Nick Alcock  <nick.alcock@oracle.com>
 
